# zoning-gpt

./: .dvcignore  .gitignore  Dockerfile  README.md  commands.sh  data.json  docker-compose.yaml  dvc.yaml  experiments.csv  launch.json  params.yaml  process_dataset.py  pyproject.toml  requirements.txt  results.pickle  tx_results.csv  tx_results.py  zoning_data.csv
.dvc/: config
.ipynb_checkpoints/: dataset_generation-checkpoint.ipynb
compose/: compose.yaml
data/: .gitignore  README.md  ct-data.xlsx.dvc  ground_truth.csv  ground_truth.csv~  names_all_towns_tx.json  orig-documents.dvc  texas-annotations.dvc  texas-documents.dvc  texas-gt.dvc  texas_documents_s3_manifest.json  textract_dataset2.dvc  tx_names_all_towns.json  tx_textract_dataset.dvc  urban_institute.dvc  zoning_atlas_data_2022.xlsx
eeshakhanna/: dataset_generation.ipynb  eval_diagnose.ipynb  eval_md.csv  process_dataset.py  query_model.py
jcllobet/: explore_included_context_data.ipynb  not-found-context-results.json  utils_term_extraction.py
maxdumas/: .gitignore  exp_analysis.ipynb  extract_text.py  generate_dataset.py  langchain.ipynb  names_all_towns.json  react_guidance.ipynb  sample_ground_truth.ipynb  upload_zoning_docs.sh
prompting/: README.md  allowed.pmpt.tpl  assemble.py  district_annotation.py  district_min_lot.pmpt.tpl  districts.pmpt.tpl  districts_sizes.py  eval.py  eval_districts.py  eval_results.py  extract.py  get_districts.py  lot_area.pmpt.tpl  requirements.txt  search.py  sizes.jsonl  thesaurus.json  usages.pmpt.tpl
ryurtyn/: exp_analysis_demo.ipynb  final-answer-confirm.ipynb  pairwise-wrong-comparison.ipynb  tournament_prompts.txt
streamlit/: app.py  requirements.txt
templates/: answer_confirm.pmpt.tpl  answer_confirm_explain.pmpt.tpl  answer_parsing.pmpt.tpl  create_thesaurus.pmpt.tpl  extract_chat_completion.pmpt.tpl  extraction.pmpt.tpl  extraction_chat_completion.pmpt.tpl  extraction_completion.pmpt.tpl  multiple_choice.pmpt.tpl  to_json.pmpt.tpl  (+2 more)
(+132 files in other folders)
