
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "datasets",
    "dvc[azure]",
    "elasticsearch-dsl",
    "faiss-cpu",
    "fuzzywuzzy",
    "GitPython",
    "manifest-ml",
    "numpy",
    "openai",
    "pandas",
    "Pillow",
    "pymupdf",
    "streamlit",
    "tiktoken",
    "pydantic",
    "diskcache",
    "tenacity>=8.2.3",
]
requires-python = ">=3.11"
name = "zoning-gpt"
version = "0.0.1"
description = ""
authors = [
    {name = "maxdumas", email = "max@dumas.nyc"},
]
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "python-dotenv>=1.0.0",
    "mypy>=1.5.1",
    "black>=23.7.0",
    "ruff>=0.0.285",
]
