
[project]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
    "datasets",
    "dvc[azure]",
    "elasticsearch-dsl",
    "faiss-cpu",
    "fuzzywuzzy",
    "GitPython",
    "manifest-ml",
    "numpy",
    "openai",
    "pandas",
    "Pillow",
    "pymupdf",
    "streamlit",
    "tiktoken",
    "pydantic",
    "diskcache",
    "tenacity>=8.2.3",
    "typer>=0.9.0",
    "joblib>=1.3.2",
    "matplotlib>=3.7.2",
    "plotly>=5.16.1",
    "scipy>=1.9.3",
    "scikit-learn>=1.3.0",
    "polars>=0.18.15",
    "ipykernel>=6.25.1",
    "nbformat>=5.9.2",
    "pylint>=3.0.1",
    "pytest>=8.0.0",
]
requires-python = ">=3.11"
name = "zoning-gpt"
version = "0.0.1"
description = ""
authors = [
    {name = "maxdumas", email = "max@dumas.nyc"},
]
readme = "README.md"
license = {text = "MIT"}


[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm.dev-dependencies]
dev = [
    "python-dotenv>=1.0.0",
    "mypy>=1.5.1",
    "black>=23.7.0",
    "ruff>=0.0.285",
    "types-PyYAML>=6.0.12.11",
]
